--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<iframe src="https://acciojob.com/" width="800px" height="600px" border="1pxsolid #ccc"></iframe>
+	<iframe src="https://acciojob.com/" width="800" height="600" border="1pxsolid #ccc"></iframe>
     <script type="text/javascript" src="./script.js">
 </script>
 
